# Malf-Pas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  environment.yml  pyproject.toml
.codex/: README.md
.codex/skills/malf-pas-governance/: SKILL.md
docs/: README.md
docs/00-governance/: 00-malf-pas-reconstruction-charter-v1.md  01-source-authority-and-non-migration-rule-v1.md  02-execution-record-protocol-v1.md  03-repo-governance-environment-bootstrap-v1.md  04-root-directory-policy-v1.md  05-post-terminal-roadmap-and-module-db-discipline-v1.md
docs/01-architecture/: 00-mainline-authoritative-map-v1.md  01-malf-v1-4-anchor-position-v1.md  02-predecessor-strength-map-v1.md  03-system-mainline-module-ownership-v1.md  04-storage-engine-and-portability-decision-v1.md  05-historical-ledger-topology-protocol-v1.md  06-daily-incremental-and-resume-protocol-v1.md  07-backtest-window-and-holdout-protocol-v1.md  08-open-source-adapter-boundary-v1.md
docs/02-modules/: 00-module-design-document-standard-v1.md  01-pas-axiomatic-state-machine-v1.md  02-malf-v1-5-wave-behavior-snapshot-v1.md  03-pas-v1-2-strength-weakness-matrix-v1.md  04-malf-pas-scenario-atlas-v1.md
docs/03-roadmap/: 00-malf-pas-governance-roadmap-v1.md  01-local-tdx-data-foundation-module-db-roadmap-v1.md
docs/04-execution/: 00-conclusion-index-v1.md  README.md
docs/04-execution/records/: README.md
docs/04-execution/records/data-foundation/: 018-data-foundation-roadmap-freeze-card-20260517-01.card.md  018-data-foundation-roadmap-freeze-card-20260517-01.conclusion.md  018-data-foundation-roadmap-freeze-card-20260517-01.evidence-index.md  018-data-foundation-roadmap-freeze-card-20260517-01.record.md  019-local-tdx-source-inventory-card-20260517-01.card.md  019-local-tdx-source-inventory-card-20260517-01.conclusion.md  019-local-tdx-source-inventory-card-20260517-01.evidence-index.md  019-local-tdx-source-inventory-card-20260517-01.record.md  020-data-module-db-contract-card-20260517-01.card.md  020-data-module-db-contract-card-20260517-01.conclusion.md  020-data-module-db-contract-card-20260517-01.evidence-index.md  020-data-module-db-contract-card-20260517-01.record.md  021-raw-market-full-build-ledger-card-20260517-01.card.md  021-raw-market-full-build-ledger-card-20260517-01.conclusion.md  021-raw-market-full-build-ledger-card-20260517-01.evidence-index.md  021-raw-market-full-build-ledger-card-20260517-01.record.md  022-market-base-day-week-month-build-card-20260517-01.card.md  022-market-base-day-week-month-build-card-20260517-01.conclusion.md  022-market-base-day-week-month-build-card-20260517-01.evidence-index.md  022-market-base-day-week-month-build-card-20260517-01.record.md  023-market-meta-tradability-calendar-card-20260517-01.card.md  023-market-meta-tradability-calendar-card-20260517-01.conclusion.md  023-market-meta-tradability-calendar-card-20260517-01.evidence-index.md  023-market-meta-tradability-calendar-card-20260517-01.record.md
docs/04-execution/records/governance/: 001-governance-roadmap-freeze-card-20260515-01.card.md  001-governance-roadmap-freeze-card-20260515-01.evidence-index.md  001-governance-roadmap-freeze-card-20260515-01.record.md  002-repo-governance-environment-bootstrap-card-20260515-01.evidence-index.md  002-repo-governance-environment-bootstrap-card-20260515-01.record.md  003-system-mainline-module-ownership-card-20260515-01.card.md  003-system-mainline-module-ownership-card-20260515-01.conclusion.md  003-system-mainline-module-ownership-card-20260515-01.evidence-index.md  003-system-mainline-module-ownership-card-20260515-01.record.md  004-storage-engine-and-portability-decision-card-20260515-01.card.md  004-storage-engine-and-portability-decision-card-20260515-01.conclusion.md  004-storage-engine-and-portability-decision-card-20260515-01.evidence-index.md  (+60 more)
docs/04-execution/templates/: card.md  conclusion.md  evidence-index.md  record.md
governance/: README.md  backtest_window_holdout_registry.toml  daily_incremental_protocol_registry.toml  data_foundation_roadmap_registry.toml  data_module_db_contract_registry.toml  database_topology_registry.toml  environment_bootstrap_registry.toml  local_tdx_source_inventory_registry.toml  malf_pas_revision_roadmap_registry.toml  malf_pas_scenario_atlas_registry.toml  malf_v1_4_immutability_registry.toml  malf_v1_5_wave_behavior_snapshot_registry.toml  market_base_day_week_month_registry.toml  market_meta_tradability_calendar_registry.toml  module_gate_registry.toml  module_ownership_registry.toml  open_source_adapter_boundary_registry.toml  pas_axiomatic_state_machine_registry.toml  pas_v1_2_strength_weakness_matrix_registry.toml  post_terminal_roadmap_discipline_registry.toml  predecessor_strength_registry.toml  raw_market_full_build_registry.toml  repo_governance_registry.toml  root_directory_registry.toml  source_authority_registry.toml  storage_engine_registry.toml
governance/module_api_contracts/: README.md
plugins/malf-pas-workflow/: hooks.json
plugins/malf-pas-workflow/.codex-plugin/: plugin.json
plugins/malf-pas-workflow/scripts/: malf_pas_codex_hook.ps1
scripts/data_foundation/: build_market_base_day_week_month.py  build_market_meta_tradability_calendar.py  build_raw_market_full_ledger.py  inventory_local_tdx_sources.py  validate_data_contract.py  validate_market_base_day_week_month.py  validate_market_meta_tradability_calendar.py  validate_raw_market_ledger.py
scripts/dev/: doctor.py
scripts/governance/: check_malf_pas_workflow.py  check_project_governance.py
src/malf_pas/core/: paths.py
src/malf_pas/data_foundation/: __init__.py  contract.py  market_base.py  market_meta.py  raw_market.py  source_inventory.py  tdx_meta.py
src/malf_pas/governance/: checks.py
tests/data_foundation/: support_tdx_meta_fixtures.py  test_data_contract.py  test_market_base_cli.py  test_market_base_ledger.py  test_market_meta_cli.py  test_market_meta_ledger.py  test_raw_market_cli.py  test_raw_market_ledger.py  test_source_inventory.py
tests/governance/: test_governance_checks.py
